<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v4.app.FragmentTabHost
        android:id="@+id/tabHost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <RadioGroup
        android:id="@+id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab1"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tab1"
            android:textColor="@drawable/text_color"
            android:button="@null"
            android:gravity="center"

            android:background="#AA009682"/>

        <RadioButton
            android:id="@+id/tab2"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tab2"
            android:textColor="@drawable/text_color"
            android:background="#AA009682"/>

        <RadioButton
            android:id="@+id/tab3"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/tab3"
            android:textColor="@drawable/text_color"
            android:gravity="center"
            android:background="#AA009682"/>

        <RadioButton
            android:id="@+id/tab4"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/tab4"
            android:textColor="@drawable/text_color"
            android:gravity="center"
            android:background="#AA009682"/>
    </RadioGroup>



</LinearLayout>
